# ESP32S3-LVGL-Port-IDF

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old  更新日志.md
components/audio_player/: CMakeLists.txt  audio_dlna.c  audio_dlna.h  audio_metadata.c  audio_metadata.h  audio_player.c  audio_player.h
components/lv_port_fs/: CMakeLists.txt  lv_port_fs.c  lv_port_fs.h
components/lvgl/: lv_conf.h
components/lvgl_driver/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_touch/: Kconfig  gt911.c
components/lvgl_fonts/: CMakeLists.txt  PINGFANG.c  font_harmony_sans_20.c  lv_fonts.h
components/sd_playlist/: CMakeLists.txt  sd_playlist.c  sd_playlist.h
doc/DLNA无线投放音频/: DLNA无线投放音频.md
doc/LVGL使用8080串口驱动屏幕，并使用SD卡/: LVGL使用8080串口驱动屏幕，并使用SD卡.md  LVGL使用8080驱动屏幕，驱动SD卡对接至LVGL  .md
doc/LVGL导入中文大字库/: LVGL导入中文大字库.md  将LVGL的中文字体编译为文件写入Flash中并读取 - 远处有泽细细说.html
doc/LVGL导入中文大字库/将LVGL的中文字体编译为文件写入Flash中并读取 - 远处有泽细细说_files/: hm.js.下载  style.min.css
doc/MP3文件中的元数据/: MP3文件中的元数据.md
doc/lvgl帧率优化/: lvgl帧率优化.md
doc/lvgl移植/: lvgl.md
doc/使用ESP-ADF播放MP3音频/: 音频处理.md
doc/使用LVGL解码显示媒体文件/: 使用LVGL解码显示媒体文件.md
doc/使用Squareline并移植到ESP32/: 使用Squareline并移植到ESP32.md
main/: CMakeLists.txt  main.c
main/dev_board/: dev_board.h
main/sd/: sd.c  sd.h
main/ui/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/screens/: ui_Screen1.c
